<resources>
    <string name="app_name">KaloriMonitoring</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="skip">SKIP</string>
    <string name="nama">Nama</string>
    <string name="berat_badan_yang_diinginkan">Berat Badan Yang Diinginkan</string>
    <string name="tujuan_diet">Tujuan Diet</string>
    <string name="tanggal_target_capaian">Tanggal Target Capaian</string>
    <string name="jumlah_target_kalori_harian">Jumlah Target Kalori Harian (Kal)</string>
    <string name="berat_badan_saat_ini">Berat Badan Saat Ini</string>
    <string name="tanggal">Tanggal</string>
    <string name="usia">Usia</string>
    <string name="berat">Berat (Kg)</string>
    <string name="tinggi">Tinggi (Cm)</string>
    <string name="perempuan">Perempuan</string>
    <string name="jenis_kelamin">Jenis Kelamin :</string>
    <string name="tujuan_diett">Tujuan Diet :</string>
    <string name="tingkat_aktivitas">Tingkat Aktivitas :</string>
    <string name="hitung">Hitung</string>
    <string name="_19_09_2023">19-09-2023</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="waktu_makan">Waktu Makan</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="jenis_kalori_masuk">Jenis Kalori Masuk :</string>
    <string name="sarapan">Sarapan</string>
    <string name="makan_siang">Makan Siang</string>
    <string name="makan_malam">Makan Malam</string>
    <string name="jumlah_kalori_masuk">Jumlah Kalori Masuk (Kal)</string>
    <string name="namaworkout">Nama Workout</string>
    <string name="waktu_workout">Waktu Workout Dimulai</string>
    <string name="jumlah_kalori_terbakar_kal">Jumlah Kalori Terbakar (Kal)</string>
    <string name="durasi_workout">Durasi Workout</string>
    <string name="simpan">Simpan</string>
    <string name="hari_ini">Hari Ini</string>
    <string name="sisa_kalori">Sisa Kalori</string>
    <string name="_1908">1908</string>
    <string name="konsumsi_kalori">Konsumsi Kalori</string>
    <string name="_360">360</string>
    <string name="kalori">Kalori</string>
    <string name="_1_item">1 item</string>
    <string name="makanan_sarapan">Makanan Sarapan</string>
    <string name="kalori_terbakar">Kalori Terbakar</string>
    <string name="last_item">Last Item</string>

    <string name="intro_title_1">Selamat Datang di Monitoring kalori!</string>
    <string name="intro_title_2">Sarapan</string>
    <string name="intro_title_3">Makan Malam</string>
    <string name="intro_title_4">Workout</string>
    <string name="intro_sub_title_1">Di aplikasi ini kamu bisa memonitor berapa asupan kalori yang telah masuk dan keluar, membuatmu dapat mencapai goals diet kamu!</string>
    <string name="intro_sub_title_2">Tambah asupan kalori saat kamu Sarapan</string>
    <string name="intro_sub_title_3">Tambah asupan kalori saat kamu makan Malam</string>
    <string name="intro_sub_title_4">Tambah kalori yang terbakar saat kamu Latihan</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="username">username</string>
    <string name="kembali">Kembali</string>
    <string name="atau">Atau</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="beranda">Beranda</string>
    <string name="riwayat">Riwayat</string>
    <string name="profile">Profile</string>
    <string name="_2000">2000</string>
    <string name="target_kalori">Target Kalori</string>
    <string name="_0">0</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="keluar">Keluar</string>
    <string name="tambah_makanan">Tambah Makanan</string>
    <string name="jumlah_kalori">Jumlah Kalori</string>
    <string name="custom_makanan">Custom Makanan</string>
    <string name="pagi">Pagi</string>
    <string name="takaran_saji">Takaran Saji</string>
    <string name="update_makanan">Update Makanan</string>
</resources>