<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkblue"
    android:padding="@dimen/margin_20"
    tools:context=".view.InputDataFragment">

    <EditText
        android:id="@+id/etNamaWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/namaworkout"
        android:layout_marginTop="@dimen/margin_25"
        android:textColorHint="@color/white2"
        android:textColor="@color/white2"
        />

    <EditText
        android:id="@+id/etWaktuWorkoutDimulai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/waktu_workout"
        android:layout_marginTop="@dimen/margin_10"
        android:textColorHint="@color/white2"
        android:textColor="@color/white2"
        />

    <EditText
        android:id="@+id/etDurasiWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/durasi_workout"
        android:layout_marginTop="@dimen/margin_10"
        android:textColorHint="@color/white2"
        android:textColor="@color/white2"
        />


    <EditText
        android:id="@+id/etJumlahKaloriTerbakar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jumlah_kalori_terbakar_kal"
        android:layout_marginTop="@dimen/margin_10"
        android:textColorHint="@color/white2"
        android:textColor="@color/white2"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSimpan"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/margin_20"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/margin_10"
        android:layout_gravity="end"
        android:backgroundTint="@color/earth_03"
        />

</LinearLayout>