<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    android:padding="@dimen/margin_20"
    tools:context=".view.GetStartedFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/white2"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/get_started"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="11dp" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/nama"
        app:boxBackgroundColor="@color/darkblue"
        app:boxStrokeColor="@color/black"
        android:textColorHint="@color/white2"
        android:layout_marginTop="@dimen/margin_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNama"
            android:textColor="@color/white2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/berat_badan_saat_ini"
        app:boxBackgroundColor="@color/darkblue"
        app:boxStrokeColor="@color/black"
        android:textColorHint="@color/white2"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBeratBadan"
            android:textColor="@color/white2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/berat_badan_yang_diinginkan"
        app:boxBackgroundColor="@color/darkblue"
        app:boxStrokeColor="@color/black"
        android:textColorHint="@color/white2"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/outlinedTextField2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBeratBadanDiinginkan"
            android:textColor="@color/white2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvTextTujuanDiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tujuan_diett"
        android:textColor="@color/white3"
        android:layout_marginStart="15dp"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField3"
        />

    <Spinner
        android:id="@+id/spTujuanDiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvTextTujuanDiet"
        />

    <TextView
        android:id="@+id/tvTextTanggalTargetCapaian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_target_capaian"
        android:textColor="@color/white3"
        android:layout_marginStart="15dp"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/margin_20"
        app:layout_constraintTop_toBottomOf="@+id/spTujuanDiet"
        />

    <EditText
        android:id="@+id/etTanggalTargetapaian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/_19_09_2023"
        android:textColorHint="@color/white2"
        app:layout_constraintTop_toBottomOf="@+id/tvTextTanggalTargetCapaian"
        />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/jumlah_target_kalori_harian"
        app:boxBackgroundColor="@color/darkblue"
        app:boxStrokeColor="@color/black"
        android:textColorHint="@color/white2"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTanggalTargetapaian">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etJumlahTargetKaloriHarian"
            android:textColor="@color/white2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSimpanGetStarted"
        android:layout_width="wrap_content"
        android:backgroundTint="@color/earth_03"
        android:textColor="@color/black"
        android:text="@string/simpan"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField6"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>