<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="150dp"
    android:id="@+id/onClickDetail"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="#FBF0F0"
    android:layout_marginTop="@dimen/margin_10"
    android:elevation="200dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivGambar"
            android:layout_width="150dp"
            android:src="@drawable/logougm"
            android:scaleType="centerCrop"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/tv_namaMakanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/nama_makanan"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            />
        <TextView
            android:id="@+id/tv_jumlahKalori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_namaMakanan"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/jumlah_kalori"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            />
        <TextView
            android:id="@+id/tv_jamMakan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_jumlahKalori"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/pagi"
            android:fontFamily="@font/poppins_medium"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_20"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



</com.google.android.material.card.MaterialCardView>